--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,25 @@ _sources/
 .config
 .run
 
+# prj-spec dirs
+# <https://github.com/numtide/prj-spec>
+.bin
+.cache
+.config
+.data
+.run
+
+#sops
+*.secrets.yaml
+secrets.yaml
+
+# keys
+*.key
+*.crt
+
+# macOS-specific files
+.DS_Store
+
 # nixago: ignore-linked-files
 /cog.toml
 /lefthook.yml
